# hit-forecast

./: .gitignore  README.md  pyproject.toml
configs/experiments/: _gifteval_base.yaml  gifteval_contaminated.yaml  gifteval_main_clean.yaml  gifteval_pilot.yaml  synthetic.yaml
results/synthetic_regime_switch/: aggregates.json  diagnostics.json  history.json  metrics.csv  metrics.json
scripts/: download_gifteval.sh  run_l40s.sh  run_paper.sh  run_tmux.sh  setup_env.sh
src/hit_forecast/: __init__.py
src/hit_forecast/cli/: _common.py  cache_features.py  diagnostics.py  evaluate.py  export_tables.py  run_all.py  run_synthetic.py  train_router.py
src/hit_forecast/data/: __init__.py  gifteval.py  metrics.py  synthetic.py  windows.py
src/hit_forecast/eval/: __init__.py  aggregate.py  baselines.py
src/hit_forecast/experts/: __init__.py  _features.py  base.py  chronos.py  classical.py  dummy.py  moirai.py  registry.py  timesfm.py  tirex.py
src/hit_forecast/features/: __init__.py  cache.py
src/hit_forecast/models/: __init__.py  dataset.py  losses.py  pooled_mlp.py  router.py
src/hit_forecast/train/: __init__.py  diagnostics.py  trainer.py
src/hit_forecast/utils/: __init__.py  config.py  logging.py  seed.py
tests/: test_adapters_paper.py  test_metrics.py  test_pipeline.py  test_pool_and_features.py  test_router.py
